tests/errors/ArrayFail2.ob
(* Cause a runtime failure because the array index is out of bounds. *)

MODULE ArrayFail2;

IMPORT Out;

TYPE
  A5 = ARRAY 5 OF INTEGER;

VAR
  a5:  A5;

PROCEDURE Test(a: ARRAY OF INTEGER);
BEGIN
  Out.Int(a[7]); Out.Ln
END Test;

BEGIN
  a5[2] := 30;
  (* This fails at compile time, but the open array above does not*)
  (* a5[7] := 30;                                                 *)
  Test(a5); (* This fails *)
END ArrayFail2.
